--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style><style>.gm-style img{max-width: none;}.gm-style {font: 400 11px Roboto, Arial, sans-serif; text-decoration: none;}</style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <meta charset="utf-8">
-    <title>Invitex - One Page Event Website Template</title>
+    <title>Tesseract</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Invitex is event and conference website template">
     <meta name="author" content="">
